ros2_ws/log/build_2024-01-22_17-04-29/bluey_tools/stderr.log
/usr/lib/python3/dist-packages/setuptools/command/install.py:34: SetuptoolsDeprecationWarning: setup.py install is deprecated. Use build and pip and other standards-based tools.
  warnings.warn(
  File "/home/jenkin/Documents/Bluey2.0/ros2_ws/install/bluey_tools/lib/python3.10/site-packages/bluey_tools/bluey_ctrl_node.py", line 100
    self.get_logger().info(f'{self.get_name()} returning {self._master.mode_mapping().keys()}")
                           ^
SyntaxError: unterminated string literal (detected at line 100)

